--- a/src/components/DataCapture.css
+++ b/src/components/DataCapture.css
@@ -44,7 +44,7 @@
   form textarea,
   form select {
     width: 30%;
-    padding: 10px;
+    padding: 10px ;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -57,7 +57,7 @@
   
   form textarea {
     resize: vertical;
-    height: 100px;
+    height: 50px;
   }
   
   /* Button styles */
@@ -110,9 +110,15 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 200px;
   }
   
   button:hover {
     background-color: #0056b3;
   }
-  
+  .subject-status{
+    padding-top: 20px;
+  }
+.subject-status tr td{
+ padding-right: 50px;
+}
