--- a/src/components/DataCapture.css
+++ b/src/components/DataCapture.css
@@ -5,7 +5,9 @@
     max-width: auto;
     margin: auto;
     background-color: #f7f7f7;
-    border-radius: 10px;
+    border: 1px solid grey;
+    margin: 20px;
+    /* border-radius: 10px; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    
   }
@@ -39,16 +41,18 @@
     padding: 5px;
     font-size: 14px;
     height: 30px;
-    /* text-align: center; */
-   
     width: 50%;
     justify-content: space-between;
     align-items: center;
+  }
+  .sug{
+    margin-left: 200px;
   }
 
   /* Form input field styles */
   form div {
     margin-bottom: 15px;
+   
   }
   
   form label {
@@ -56,6 +60,9 @@
     margin-bottom: 8px;
     font-weight: bold;
     width:15%;
+    text-align: right;
+    font-size: 14px;
+    margin-right: 10px;
     
   }
   
@@ -89,14 +96,22 @@
     margin-right: 10px;
     font-size: 16px;
     color: white;
-    background-color: #4CAF50;
+    background-color: #362CA6;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width:100px;
+   
+  }
+  .submit-button{
+    margin-left: 200px;
+  }
+  .reset-button{
+    margin-left: 10px;
   }
   
   form button[type="button"] {
-    background-color: #f44336;
+    background-color: #362CA6;
   }
   
   form button[type="submit"]:hover,
@@ -132,7 +147,11 @@
   .subject-dashboard-row{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+   
+    /* justify-content: space-between; */
+  }
+  .subject-dashboard-row label{
+    margin-right: 20px;
   }
   .subject-dashboard h1{
     font-size: 14px;
@@ -143,11 +162,14 @@
     height: 20px;
     display: flex;
     flex-direction: row;
-    
+    border-radius: 5px;
+    align-items: center;
   }
- 
+ .b1{
+   margin-left:10px;
+ }
   .b2{
-      justify-content: flex-end;
+     margin-left: 600px;
   }
   .subject-status{
     padding-top: 20px;
